[package]
name = "d3d9"
version = "0.1.0"
edition = "2021"
authors = ["Progre"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ['cdylib']

[build-dependencies]
winres = "0.1"

[dependencies]
rand = "0.8.5"
windows = { version = "0.51.1", features = [
  "Win32_Foundation",
  "Win32_Graphics_Direct3D9",
  "Win32_System_Console",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
] }

[package.metadata.winres]
LegalCopyright = "© Progre"
ProductName = "th19tool"
FileDescription = "https://github.com/progre/th19tool/"
